[gd_scene load_steps=25 format=2]

[ext_resource path="res://addons/SafeArea/SafeArea.gd" type="Script" id=1]
[ext_resource path="res://menu/editor/ui/ui.gd" type="Script" id=2]
[ext_resource path="res://assets/camera/movable_camera_ui.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/editor/toggle_button/toggle_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/user_interface/icons/editor_menu_icon/tile_water.png" type="Texture" id=5]
[ext_resource path="res://menu/editor/dragable_card/dragable_card.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/user_interface/icons/editor_menu_icon/tile_tree.png" type="Texture" id=7]
[ext_resource path="res://assets/user_interface/icons/editor_menu_icon/tile_base.png" type="Texture" id=8]
[ext_resource path="res://assets/user_interface/icons/editor_menu_icon/tile_remove.png" type="Texture" id=9]
[ext_resource path="res://assets/user_interface/icons/editor_menu_icon/tile_capture.png" type="Texture" id=10]
[ext_resource path="res://assets/user_interface/icons/editor_menu_card/ground_tile_card.png" type="Texture" id=11]
[ext_resource path="res://assets/user_interface/fonts/montserrat_eb_14.tres" type="DynamicFont" id=12]
[ext_resource path="res://assets/user_interface/icons/editor_menu_icon/tile.png" type="Texture" id=13]
[ext_resource path="res://assets/user_interface/icons/editor_menu_card/water_tile_card.png" type="Texture" id=14]
[ext_resource path="res://assets/user_interface/icons/editor_menu_card/forest_tile_card.png" type="Texture" id=15]
[ext_resource path="res://assets/user_interface/icons/editor_menu_card/faction_base_card.png" type="Texture" id=16]
[ext_resource path="res://assets/user_interface/icons/editor_menu_icon/grand_map.png" type="Texture" id=17]
[ext_resource path="res://assets/user_interface/icons/editor_menu_card/capture_point_card.png" type="Texture" id=18]
[ext_resource path="res://assets/user_interface/icons/editor_menu_icon/tile_nav.png" type="Texture" id=19]
[ext_resource path="res://assets/user_interface/fonts/montserrat_eb_16.tres" type="DynamicFont" id=20]
[ext_resource path="res://assets/user_interface/icons/back_fill.png" type="Texture" id=21]
[ext_resource path="res://assets/user_interface/icons/editor_menu_icon/save.png" type="Texture" id=22]
[ext_resource path="res://assets/user_interface/icons/editor_menu_card/forest_tile_card_2.png" type="Texture" id=23]
[ext_resource path="res://assets/user_interface/fonts/montserrat_eb_32.tres" type="DynamicFont" id=24]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="floating_image_card" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.5 )
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
expand = true

[node name="movable_camera_ui" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="Control" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
margin_top = 879.0
margin_right = 600.0
margin_bottom = 1024.0
rect_min_size = Vector2( 0, 145 )
size_flags_vertical = 8
color = Color( 0, 0, 0, 0.427451 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
margin_right = 600.0
margin_bottom = 1024.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 600.0
margin_bottom = 100.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_right = 12.0
margin_bottom = 100.0
rect_min_size = Vector2( 12, 0 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 316.0
margin_bottom = 80.0
rect_min_size = Vector2( 300, 80 )
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 0.054902, 0.054902, 0.054902, 1 )

[node name="map_name" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 20 )
text = "Ia Drang (3 X 3)"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 320.0
margin_right = 364.0
margin_bottom = 100.0
rect_min_size = Vector2( 24, 0 )
size_flags_horizontal = 3

[node name="save_button" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 368.0
margin_right = 468.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/save_button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/save_button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 22 )
expand = true

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 472.0
margin_right = 480.0
margin_bottom = 100.0
rect_min_size = Vector2( 8, 0 )

[node name="menu_button" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 484.0
margin_right = 584.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/menu_button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/menu_button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 21 )
expand = true
flip_h = true

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 588.0
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 12, 0 )

[node name="HBoxContainer2" type="Control" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 104.0
margin_right = 600.0
margin_bottom = 784.0
mouse_filter = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -580.0
margin_right = 100.0
mouse_filter = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 114.0
margin_right = 100.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 12 )
text = "Tile"
align = 1
valign = 1

[node name="ground_tile" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 158.0
margin_bottom = 258.0
button_image = ExtResource( 13 )
manual_toggle = true

[node name="water_tile" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 262.0
margin_bottom = 362.0
button_image = ExtResource( 5 )
manual_toggle = true

[node name="object_forest" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 366.0
margin_bottom = 466.0
button_image = ExtResource( 7 )
manual_toggle = true

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -580.0
mouse_filter = 2
alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 114.0
margin_right = 100.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 12 )
text = "Map"
align = 1
valign = 1

[node name="faction_base" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/VBoxContainer2" instance=ExtResource( 4 )]
margin_top = 158.0
margin_bottom = 258.0
button_image = ExtResource( 8 )
manual_toggle = true

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/VBoxContainer2/faction_base"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
custom_fonts/font = ExtResource( 24 )
text = "2"
align = 1
valign = 1

[node name="capture_point" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/VBoxContainer2" instance=ExtResource( 4 )]
margin_top = 262.0
margin_bottom = 362.0
button_image = ExtResource( 10 )
manual_toggle = true

[node name="Label2" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/VBoxContainer2/capture_point"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
custom_fonts/font = ExtResource( 24 )
text = "2"
align = 1
valign = 1

[node name="show_nav" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/VBoxContainer2" instance=ExtResource( 4 )]
margin_top = 366.0
margin_bottom = 466.0
button_image = ExtResource( 19 )

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 788.0
margin_right = 600.0
margin_bottom = 820.0
rect_min_size = Vector2( 0, 32 )
custom_fonts/font = ExtResource( 20 )
text = "Drag and Drop"
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 824.0
margin_right = 600.0
margin_bottom = 1024.0
rect_min_size = Vector2( 0, 200 )
mouse_filter = 2
alignment = 1

[node name="zoom_in_card" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3" instance=ExtResource( 6 )]
margin_left = 182.0
margin_right = 282.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/zoom_in_card"]
show_behind_parent = true
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 17 )
expand = true

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/zoom_in_card/TextureRect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.109804, 0.258824, 0.141176, 1 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3"]
margin_left = 286.0
margin_right = 298.0
margin_bottom = 200.0
rect_min_size = Vector2( 12, 0 )

[node name="HBoxContainer1" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3"]
visible = false
margin_left = 120.0
margin_right = 245.0
margin_bottom = 200.0

[node name="ground_tile_card" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/HBoxContainer1" instance=ExtResource( 6 )]
margin_right = 125.0
margin_bottom = 150.0
rect_min_size = Vector2( 125, 150 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/HBoxContainer1/ground_tile_card"]
show_behind_parent = true
margin_right = 125.0
margin_bottom = 150.0
texture = ExtResource( 11 )
expand = true

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3"]
visible = false
margin_left = 120.0
margin_right = 245.0
margin_bottom = 200.0

[node name="water_tile_card" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/HBoxContainer2" instance=ExtResource( 6 )]
margin_right = 125.0
margin_bottom = 150.0
rect_min_size = Vector2( 125, 150 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/HBoxContainer2/water_tile_card"]
show_behind_parent = true
margin_right = 125.0
margin_bottom = 150.0
texture = ExtResource( 14 )
expand = true

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3"]
visible = false
margin_left = 120.0
margin_right = 374.0
margin_bottom = 200.0

[node name="object_forest_card" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/HBoxContainer3" instance=ExtResource( 6 )]
margin_right = 125.0
margin_bottom = 150.0
rect_min_size = Vector2( 125, 150 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/HBoxContainer3/object_forest_card"]
show_behind_parent = true
margin_right = 125.0
margin_bottom = 150.0
texture = ExtResource( 15 )
expand = true

[node name="object_forest_card2" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/HBoxContainer3" instance=ExtResource( 6 )]
margin_left = 129.0
margin_right = 254.0
margin_bottom = 150.0
rect_min_size = Vector2( 125, 150 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/HBoxContainer3/object_forest_card2"]
show_behind_parent = true
margin_right = 125.0
margin_bottom = 150.0
texture = ExtResource( 23 )
expand = true

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3"]
visible = false
margin_left = 173.0
margin_right = 298.0
margin_bottom = 200.0

[node name="object_base_card" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/HBoxContainer4" instance=ExtResource( 6 )]
margin_right = 125.0
margin_bottom = 150.0
rect_min_size = Vector2( 125, 150 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/HBoxContainer4/object_base_card"]
show_behind_parent = true
margin_right = 125.0
margin_bottom = 150.0
texture = ExtResource( 16 )
expand = true

[node name="HBoxContainer5" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3"]
visible = false
margin_left = 237.0
margin_right = 362.0
margin_bottom = 200.0

[node name="object_capture_card" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/HBoxContainer5" instance=ExtResource( 6 )]
margin_right = 125.0
margin_bottom = 150.0
rect_min_size = Vector2( 125, 150 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/HBoxContainer5/object_capture_card"]
show_behind_parent = true
margin_right = 125.0
margin_bottom = 150.0
texture = ExtResource( 18 )
expand = true

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3"]
margin_left = 302.0
margin_right = 314.0
margin_bottom = 200.0
rect_min_size = Vector2( 12, 0 )

[node name="object_remove_card" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3" instance=ExtResource( 6 )]
margin_left = 318.0
margin_right = 418.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/object_remove_card"]
show_behind_parent = true
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 9 )
expand = true

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3/object_remove_card/TextureRect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.45098, 0, 0, 1 )

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/VBoxContainer2/show_nav" to="." method="_on_show_nav_pressed"]
